--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+spring.config.import=optional:file:.env[.properties]
 server.port=8080
 
 # PostgreSQL
@@ -8,16 +9,25 @@ spring.datasource.password=test1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 # Redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.ssl.enabled=true
+#spring.data.redis.ssl.enabled=true
 
 # Jwt
 jwt_secret=${JWT_SECRET}
 jwt.access-token-validity=${JWT_ACCESS_TOKEN_VALIDITY:3600000} 
 jwt.refresh-token-validity=${JWT_REFRESH_TOKEN_VALIDITY:604800000} 
+
+# Smtp
+spring.mail.host=smtp.example.com
+spring.mail.port=587 
+spring.mail.username=tjdwns8083@gmail.com
+spring.mail.password=yvkj rgax grmn khhk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
