docs: Swagger - Auth 문서화

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,20 +3,19 @@ spring.config.import=optional:file:.env[.properties]
 server.port=8080
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/teamsync
-spring.datasource.username=teamsync
-spring.datasource.password=test1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
 # Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${SPRING_REDIS_HOST}
+spring.data.redis.port=${SPRING_REDIS_PORT}
 #spring.data.redis.ssl.enabled=true
 
 # Jwt
@@ -25,19 +24,19 @@ jwt.access-token-validity=${JWT_ACCESS_TOKEN_VALIDITY:3600000}
 jwt.refresh-token-validity=${JWT_REFRESH_TOKEN_VALIDITY:604800000} 
 
 # Smtp
-spring.mail.host=smtp.example.com
-spring.mail.port=587 
-spring.mail.username=tjdwns8083@gmail.com
-spring.mail.password=yvkj rgax grmn khhk
+spring.mail.host=${SPRING_MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${SPRING_MAIL_PORT:587} 
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # swagger
 springdoc.version=V.0.0.1
-springdoc.swagger-ui.path=/swagger.html
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/v3/api-docs
 
 springdoc.default-consumes-media-type=application/json;charset=UTF-8
 springdoc.default-produces-media-type=application/json;charset=UTF-8
